--- a/.obsidian/snippets/custom.css
+++ b/.obsidian/snippets/custom.css
@@ -69,6 +69,24 @@ img {
     padding: 0.1em 0.4em 0.17em;
 }
 
+.markdown-rendered hr {
+    position: relative;
+    border: none;
+    height: 50px;
+}
+
+.markdown-rendered hr::before {
+    content: "．．．";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    color: #aaa5;
+    font-size: var(--h1-size);
+}
+
 blockquote {
     position: relative;
     border: none !important;
