--- a/.obsidian/snippets/custom.css
+++ b/.obsidian/snippets/custom.css
@@ -24,7 +24,7 @@ h1 {
   position: relative;
   margin: 20px 0 !important;
   padding: 100px 0 15px;
-  border-bottom: 2px solid #aaa5;
+  border-bottom: 2px solid rgba(170, 170, 170, 0.3333333333);
   border-radius: 2px;
   letter-spacing: 0.1rem !important;
 }
@@ -36,7 +36,7 @@ h1::before {
   width: 100%;
   margin-top: 20px;
   text-align: center;
-  color: #aaa5;
+  color: rgba(170, 170, 170, 0.3333333333);
 }
 
 ul > li {
@@ -78,7 +78,7 @@ img {
   width: 100%;
   height: 100%;
   text-align: center;
-  color: #aaa5;
+  color: rgba(170, 170, 170, 0.3333333333);
   font-size: var(--h1-size);
 }
 
