--- a/.obsidian/snippets/custom.css
+++ b/.obsidian/snippets/custom.css
@@ -1,6 +1,7 @@
 @charset "UTF-8";
 * {
   --radius-s: 5px;
+  --h1-size: 2rem;
 }
 *:not(pre), *:not(code) {
   text-align: left;
@@ -24,13 +25,20 @@
   --code-background: #0001;
 }
 
+.inline-title {
+  letter-spacing: 0.1rem;
+  text-align: center;
+  line-height: 2.8rem;
+  font-size: 2.4rem;
+}
+
 h1 {
   position: relative;
   margin: 20px 0 !important;
   padding: 100px 0 15px;
   border-bottom: 2px solid rgba(170, 170, 170, 0.3333333333);
   border-radius: 2px;
-  letter-spacing: 0.1rem !important;
+  letter-spacing: 0.07rem !important;
 }
 h1::before {
   content: "．．．";
