--- a/.obsidian/snippets/custom.scss
+++ b/.obsidian/snippets/custom.scss
@@ -1,5 +1,6 @@
 * {
     --radius-s: 5px;
+    --h1-size: 2rem;
     &:not(pre),
     &:not(code) {
         text-align: left;
@@ -25,13 +26,20 @@
     --code-background: #0001;
 }
 
+.inline-title {
+    letter-spacing: 0.1rem;
+    text-align: center;
+    line-height: 2.8rem;
+    font-size: 2.4rem;
+}
+
 h1 {
     position: relative;
     margin: 20px 0 !important;
     padding: 100px 0 15px;
     border-bottom: 2px solid #aaa5;
     border-radius: 2px;
-    letter-spacing: 0.1rem !important;
+    letter-spacing: 0.07rem !important;
     &::before {
         content: "．．．";
         position: absolute;
