--- a/.obsidian/snippets/custom.css
+++ b/.obsidian/snippets/custom.css
@@ -39,6 +39,7 @@ h1 {
   border-bottom: 2px solid rgba(170, 170, 170, 0.3333333333);
   border-radius: 2px;
   letter-spacing: 0.07rem !important;
+  line-height: 2.8rem !important;
 }
 h1::before {
   content: "．．．";
@@ -62,6 +63,16 @@ h3 {
 p {
   line-height: 1.8rem;
   margin-block-end: 1em !important;
+  letter-spacing: 1px;
+}
+
+em {
+  opacity: 0.7;
+}
+
+mark {
+  padding: 1px 2px;
+  border-radius: 3px;
 }
 
 img {
@@ -70,8 +81,8 @@ img {
 
 .markdown-rendered pre {
   border-radius: 0.7em;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  padding-top: 12px;
+  padding-bottom: 12px;
 }
 .markdown-rendered code {
   border-radius: 0.3em;
