--- a/.obsidian/snippets/custom.scss
+++ b/.obsidian/snippets/custom.scss
@@ -80,6 +80,11 @@ img {
     margin-bottom: 40px;
 }
 
+iframe {
+    width: 100%;
+    border-radius: 8px;
+}
+
 .markdown-rendered {
     pre {
         border-radius: 0.7em;
@@ -123,5 +128,13 @@ blockquote {
         top: -20px;
         font-size: 5rem;
         color: #ddd;
+    }
+}
+
+.callout {
+    padding: 12px 20px 0px;
+    .callout-title {
+        gap: 6px;
+        margin-bottom: 10px;
     }
 }
