--- a/.obsidian/snippets/custom.css
+++ b/.obsidian/snippets/custom.css
@@ -11,6 +11,12 @@
   text-align: justify;
   text-justify: inter-word;
 }
+* p {
+  line-height: 1.8rem;
+  margin-block-end: 1em !important;
+  margin: 17px 0;
+  letter-spacing: 1px;
+}
 
 .theme-dark {
   --color-base-00: #000;
@@ -63,6 +69,7 @@ h3 {
 p {
   line-height: 1.8rem;
   margin-block-end: 1em !important;
+  margin: 17px 0;
   letter-spacing: 1px;
 }
 
@@ -134,4 +141,8 @@ blockquote::before {
 .callout .callout-title {
   gap: 6px;
   margin-bottom: 10px;
+}
+
+table {
+  width: 100%;
 }
