--- a/.obsidian/snippets/custom.css
+++ b/.obsidian/snippets/custom.css
@@ -11,12 +11,6 @@
   text-align: justify;
   text-justify: inter-word;
 }
-* p {
-  line-height: 1.8rem;
-  margin-block-end: 1em !important;
-  margin: 17px 0;
-  letter-spacing: 1px;
-}
 
 .theme-dark {
   --color-base-00: #000;
@@ -69,7 +63,6 @@ h3 {
 p {
   line-height: 1.8rem;
   margin-block-end: 1em !important;
-  margin: 17px 0;
   letter-spacing: 1px;
 }
 
@@ -93,8 +86,8 @@ iframe {
 
 .markdown-rendered pre {
   border-radius: 0.7em;
-  padding-top: 12px;
-  padding-bottom: 12px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 .markdown-rendered code {
   border-radius: 0.3em;
@@ -121,10 +114,16 @@ blockquote {
   position: relative;
   border: none !important;
   padding: 5px 0 5px 50px !important;
-  margin: 25px 0;
+  margin: 40px 0;
   font-style: italic !important;
   letter-spacing: 1px !important;
   opacity: 0.85;
+}
+blockquote p:first-child {
+  margin-top: 0 !important;
+}
+blockquote p:last-child {
+  margin-bottom: 0 !important;
 }
 blockquote::before {
   content: "“";
@@ -136,13 +135,31 @@ blockquote::before {
 }
 
 .callout {
-  padding: 12px 20px 0px;
+  padding: 15px 20px;
 }
 .callout .callout-title {
   gap: 6px;
-  margin-bottom: 10px;
+  margin-bottom: 8px;
+}
+.callout p {
+  margin: 8px 0 !important;
+}
+.callout p:first-child {
+  margin-top: 0 !important;
+}
+.callout p:last-child {
+  margin-bottom: 0 !important;
+}
+.callout:hover {
+  opacity: 0.9;
+  transition-duration: 150ms;
 }
 
 table {
   width: 100%;
+}
+
+a.tag {
+  border-radius: 5px;
+  transition-duration: 150ms;
 }
