--- a/.obsidian/snippets/custom.scss
+++ b/.obsidian/snippets/custom.scss
@@ -64,7 +64,6 @@ h3 {
 p {
     line-height: 1.8rem;
     margin-block-end: 1em !important;
-    margin: 17px 0;
     letter-spacing: 1px;
 }
 
@@ -89,8 +88,8 @@ iframe {
 .markdown-rendered {
     pre {
         border-radius: 0.7em;
-        padding-top: 12px;
-        padding-bottom: 12px;
+        padding-top: 15px;
+        padding-bottom: 15px;
     }
     code {
         border-radius: 0.3em;
@@ -118,10 +117,18 @@ blockquote {
     position: relative;
     border: none !important;
     padding: 5px 0 5px 50px !important;
-    margin: 25px 0;
+    margin: 40px 0;
     font-style: italic !important;
     letter-spacing: 1px !important;
     opacity: 0.85;
+    p {
+        &:first-child {
+            margin-top: 0 !important;
+        }
+        &:last-child {
+            margin-bottom: 0 !important;
+        }
+    }
     &::before {
         content: "“";
         position: absolute;
@@ -133,13 +140,33 @@ blockquote {
 }
 
 .callout {
-    padding: 12px 20px 0px;
+    padding: 15px 20px;
     .callout-title {
         gap: 6px;
-        margin-bottom: 10px;
+        margin-bottom: 8px;
+    }
+    p {
+        margin: 8px 0 !important;
+        &:first-child {
+            margin-top: 0 !important;
+        }
+        &:last-child {
+            margin-bottom: 0 !important;
+        }
+    }
+    &:hover {
+        opacity: 0.9;
+        transition-duration: 150ms;
     }
 }
 
 table {
     width: 100%;
+}
+
+a {
+    &.tag {
+        border-radius: 5px;
+        transition-duration: 150ms;
+    }
 }
