--- a/.obsidian/snippets/custom.css
+++ b/.obsidian/snippets/custom.css
@@ -88,6 +88,11 @@ iframe {
   border-radius: 0.7em;
   padding-top: 15px;
   padding-bottom: 15px;
+  overflow-x: auto;
+}
+.markdown-rendered pre > code {
+  width: fit-content;
+  white-space: pre;
 }
 .markdown-rendered code {
   border-radius: 0.3em;
