--- a/.obsidian/snippets/custom.scss
+++ b/.obsidian/snippets/custom.scss
@@ -90,6 +90,11 @@ iframe {
         border-radius: 0.7em;
         padding-top: 15px;
         padding-bottom: 15px;
+        overflow-x: auto;
+        & > code {
+            width: fit-content;
+            white-space: pre;
+        }
     }
     code {
         border-radius: 0.3em;
