--- a/.obsidian/snippets/custom.scss
+++ b/.obsidian/snippets/custom.scss
@@ -1,5 +1,7 @@
 * {
     --radius-s: 5px;
+    --inline-title-size: calc(2.5 * var(--font-text-size));
+    --inline-title-line-hight: calc(3.5 * var(--font-text-size));
     --h1-size: calc(2.1 * var(--font-text-size));
     --h3-size: calc(1.5 * var(--font-text-size));
     --h5-size: calc(1.2 * var(--font-text-size));
@@ -37,10 +39,8 @@
 }
 
 .inline-title {
-    letter-spacing: 1px;
+    letter-spacing: 1px !important;
     text-align: center;
-    line-height: calc(3.5 * var(--font-text-size));
-    font-size: calc(2.5 * var(--font-text-size));
     padding: 20px 0;
 }
 
@@ -119,7 +119,7 @@ iframe {
                 margin-block-start: 25px;
             }
         }
-        &:has(> h4),
+        &:has(> h4):not(:last-child),
         &:has(> h5) {
             margin-block-end: 15px;
         }
@@ -271,6 +271,10 @@ a {
 .mermaid {
     display: flex;
     justify-content: center;
+    p {
+        line-height: inherit;
+        letter-spacing: inherit;
+    }
 }
 
 .canvas-node {
